--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 	<link rel="stylesheet" type="text/css" href="css/prettify.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/navigation.css">
+	
+	<!-- codemirror scripts and styles -->
+	<link rel="stylesheet" href="codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="codemirror/theme/api-tester.css">
+    <link rel="stylesheet" href="codemirror/addon/fold/foldgutter.css">
+    <script src="codemirror/lib/codemirror.js"></script>
+    <script src="codemirror/addon/mode/simple.js"></script>
+    <script src="codemirror/addon/mode/multiplex.js"></script>
+    <script src="codemirror/mode/javascript/javascript.js"></script>
+    <script src="codemirror/mode/css/css.js"></script>
+    <script src="codemirror/mode/xml/xml.js"></script>
+    <script src="codemirror/mode/handlebars/handlebars.js"></script>
+    <script src="codemirror/addon/selection/active-line.js"></script>
+    <script src="codemirror/addon/fold/foldcode.js"></script>
+    <script src="codemirror/addon/fold/foldgutter.js"></script>
+    <script src="codemirror/addon/fold/brace-fold.js"></script>
+	<style id="custom-styles">
+		.goober {
+			font-size: 300px;
+		}
+	</style>
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 </head>
 <body>
@@ -78,8 +99,9 @@
 		<i class="fa fa-pencil fa-2x fa-white block"></i>
 		<h2>Display Code</h2>
 		<textarea id="edit-template"></textarea>
+		<br>
+		<textarea id="edit-style"></textarea>
 		<a href="#0" class="update-template">Update Template</a>
-		<p class="cd-go-to-cart"><a href="#0">Go to cart page</a></p>
 	</div> <!-- cd-cart -->
 	
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -126,29 +148,25 @@
 
 <script id="users-template" type="x-template">
 	{{#data}} 
-	<div class="col-sm-4 col-md-2">
-	  	<div class="thumbnail profile-thumb">
-	      	<img src="{{ profile_picture }}" />
-	      	<div class="caption">
-	      		<p>{{ id }}<br>
-	      		{{ username }} {{ full_name }}</p>
-	      	</div>
-	  	</div>
-	</div>
+  	<div class="thumbnail profile-thumb">
+      	<img src="{{ profile_picture }}" />
+      	<div class="caption">
+      		<p>{{ id }}<br>
+      		{{ username }} {{ full_name }}</p>
+      	</div>
+  	</div>
 	{{/data}}
 </script>
 
 <script id="photos-template" type="x-template">
 	{{#data}}
-	<div class="col-sm-4 col-md-2">
-		<div class="thumbnail instagram-thumb">
-			<img src="{{images.thumbnail.url}}" />
-			<div class="caption">
-			  {{#first_n tags 2}}
-					<span class="tag">{{ this }}</span>
-			  {{/first_n}}
-			  <p>{{caption.text}}</p>
-			</div>
+	<div class="thumbnail instagram-thumb">
+		<img src="{{images.thumbnail.url}}" />
+		<div class="caption">
+		  {{#first_n tags 2}}
+				<span class="tag">{{ this }}</span>
+		  {{/first_n}}
+		  <p>{{caption.text}}</p>
 		</div>
 	</div>
 	{{/data}}
