--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!-- codemirror scripts and styles -->
 	<link rel="stylesheet" href="codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="codemirror/theme/api-tester.css">
+    <link rel="stylesheet" href="codemirror/theme/neat.css">
     <link rel="stylesheet" href="codemirror/addon/fold/foldgutter.css">
     <script src="codemirror/lib/codemirror.js"></script>
     <script src="codemirror/addon/mode/simple.js"></script>
@@ -70,11 +71,8 @@
 				    		<div class="col-sm-7 input-group">
 				      			<input type="text" class="form-control" id="access_token">
 				      			<span class="input-group-btn" data-toggle="buttons" data-toggle-default-class="btn-default">
-						            <label class="btn btn-default">
-	  									<input type="radio" name="status" value="0" /> Raw
-	 								</label>
 	 								<label class="btn btn-default">
-		  								<input type="radio" name="status" value="1" /> Formatted
+		  								<input type="radio" name="status" value="1" /> Raw
 		 							</label>
 	 								<label class="btn btn-default active">
 		  								<input type="radio" name="status" value="2" checked /> Familiar
