--- a/instagram/index.html
+++ b/instagram/index.html
@@ -5,22 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	
 	<!-- codemirror styles -->
-	<link rel="stylesheet" href="codemirror/lib/codemirror.css">
-    <link rel="stylesheet" href="codemirror/theme/api-tester.css">
-    <link rel="stylesheet" href="codemirror/theme/neat.css">
-    <link rel="stylesheet" href="codemirror/addon/fold/foldgutter.css">
+	<link rel="stylesheet" href="../codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="../codemirror/theme/api-tester.css">
+    <link rel="stylesheet" href="../codemirror/theme/neat.css">
+    <link rel="stylesheet" href="../codemirror/addon/fold/foldgutter.css">
     
     <style id="custom-styles"></style>
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<script src="../js/modernizr.js"></script> <!-- Modernizr -->
 </head>
 <body>
 	<header>
-		<div id="logo"><img src="img/cd-logo.svg" alt="Homepage"></div>
+		<div id="logo"><img src="../img/cd-logo.svg" alt="Homepage"></div>
 
 		<div id="cd-hamburger-menu"><a class="cd-img-replace" href="#0">Menu</a></div>
 		<div id="cd-cart-trigger"><i class="fa fa-pencil fa-2x fa-white"></i></div>
@@ -88,24 +88,24 @@
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.2/handlebars.min.js"></script>
-<script src="js/handlebars-helpers.js"></script>
+<script src="../js/handlebars-helpers.js"></script>
 
 <!-- codemirror scripts -->
-<script src="codemirror/lib/codemirror.js"></script>
-<script src="codemirror/addon/mode/simple.js"></script>
-<script src="codemirror/addon/mode/multiplex.js"></script>
-<script src="codemirror/mode/javascript/javascript.js"></script>
-<script src="codemirror/mode/css/css.js"></script>
-<script src="codemirror/mode/xml/xml.js"></script>
-<script src="codemirror/mode/handlebars/handlebars.js"></script>
-<script src="codemirror/addon/selection/active-line.js"></script>
-<script src="codemirror/addon/fold/foldcode.js"></script>
-<script src="codemirror/addon/fold/foldgutter.js"></script>
-<script src="codemirror/addon/fold/brace-fold.js"></script>
+<script src="../codemirror/lib/codemirror.js"></script>
+<script src="../codemirror/addon/mode/simple.js"></script>
+<script src="../codemirror/addon/mode/multiplex.js"></script>
+<script src="../codemirror/mode/javascript/javascript.js"></script>
+<script src="../codemirror/mode/css/css.js"></script>
+<script src="../codemirror/mode/xml/xml.js"></script>
+<script src="../codemirror/mode/handlebars/handlebars.js"></script>
+<script src="../codemirror/addon/selection/active-line.js"></script>
+<script src="../codemirror/addon/fold/foldcode.js"></script>
+<script src="../codemirror/addon/fold/foldgutter.js"></script>
+<script src="../codemirror/addon/fold/brace-fold.js"></script>
 
 <!-- api & ui code -->
-<script src="js/main.js"></script>
-<script src="js/api.js"></script>
+<script src="../js/main.js"></script>
+<script src="../js/api.js"></script>
 	
 	
 <script id="tabs-template" type="x-template">
