added soundcloud tester

--- a/soundcloud/index.html
+++ b/soundcloud/index.html
@@ -29,8 +29,8 @@
 	<nav id="main-nav">
 		<ul>
 			<li><a href="#0">Local Ground</a></li>
-			<li><a href="../soundcloud">SoundCloud</a></li>
-			<li><a class="current" href=".">Instagram</a></li>
+			<li><a href="." class="current">SoundCloud</a></li>
+			<li><a href="../instagram">Instagram</a></li>
 		</ul>
 	</nav>
 
