--- a/instagram/index.html
+++ b/instagram/index.html
@@ -84,6 +84,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.2/handlebars.min.js"></script>
 <script src="../lib/js/handlebars-helpers.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
 <!-- codemirror scripts -->
 <script src="../lib/codemirror/lib/codemirror.js"></script>
